# ktuner

./: CMakeLists.txt  README.md  TODO.md
fonts/: fonts.qrc
icons/: icons.qrc
res/: resources.qrc
src/: CMakeLists.txt  analysisresult.cpp  analysisresult.h  analyzer.cpp  analyzer.h  butterworthfilter.cpp  butterworthfilter.h  ktuner.cpp  ktuner.h  ktunerui.rc  main.cpp  mainwindow.cpp  mainwindow.h  note.cpp  note.h  pitchtable.cpp  pitchtable.h  spectrum.cpp  spectrum.h  tone.h  version.h.in
src/config/: analysissettings.ui  audiosettings.cpp  audiosettings.h  audiosettings.ui  guisettings.ui  ktuner.kcfg  ktunerconfig.kcfgc  ktunerconfigdialog.cpp  ktunerconfigdialog.h  tuningsettings.ui
src/ui/: AutocorrelationChart.qml  BaseChart.qml  SpectrumChart.qml  SpectrumSeries.qml  TickMark.qml  TunerGauge.qml  TunerText.qml  TunerView.qml  main.qml  ui.qrc
